[Fix] Layout issues when opening the keyboard on mobile devices

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,11 +57,6 @@
   height: calc(100% - 105px);
 }
 
-#search-input-textarea{
-  resize: none;
-  height: calc(100vh - 330px);
-}
-
 .offcanvas-backdrop {
   z-index: 1060 !important;
 }
